--- a/index.html
+++ b/index.html
@@ -21,11 +21,84 @@
           excited about the potential to work on innovative and challenging projects.
         </p>
 
-        <button class="banner-button"><a href="">Contact with me</a></button>
+        <button class="button-primary"><a href="">Contact with me</a></button>
       </div>
     </div>
   </header>
   <!--banner section end-->
+
+
+  <main>
+
+    <!--why web development section strat -->
+    <section class="webdevelopment-container">
+
+      <div class="webdevelopment-content">
+
+        <header class="box-header">
+          <h1 class="box-titel">Why Web Development??</h1>
+          <p class="box-description">Im drawn to web development for its combination of design and technical
+            challenges. I love the process of
+            building
+            functional, visually appealing websites and applications</p>
+        </header>
+
+        <div class="box-container">
+          <div class="text-box">
+            <h2 class="text-box-titel">I will Do Coding and
+              Change The World</h2>
+            <p class="text-box-description">With a passion for coding, I aim to develop technologies that drive positive
+              change and transform the
+              world.</p>
+            <button class="button-primary"><a href="">Learn more</a></button>
+          </div>
+
+          <figure class="images">
+            <img src="./assets/Layer_1.png" alt="">
+          </figure>
+        </div>
+
+        <div class="box-container">
+
+          <figure class="images">
+            <img src="./assets/Group 3.png" alt="">
+          </figure>
+
+          <div class="text-box-2">
+            <h2 class="text-box-titel">I will help People by creating
+              Modern Web System</h2>
+            <p class="text-box-description">Empowering communities through innovative web solutions, I aim to enhance
+              online experiences and drive digital transformation
+            </p>
+            <button class="button-primary"><a href="">Learn more</a></button>
+          </div>
+        </div>
+
+        <div class="box-container">
+          <div class="text-box">
+            <h2 class="text-box-titel">Creating Future-Ready Websites for Everyone</h2>
+            <p class="text-box-description">Crafting innovative and scalable web solutions, I build visually stunning
+              and technologically advanced websites.</p>
+            <button class="button-primary"><a href="">Learn more</a></button>
+          </div>
+
+          <figure class="images">
+            <img src="./assets/Group 4.png" alt="">
+          </figure>
+        </div>
+
+      </div>
+
+    </section>
+
+    <!--why web development section end -->
+
+
+
+
+
+
+  </main>
 
 
 </body>
