--- a/index.html
+++ b/index.html
@@ -90,8 +90,35 @@
       </div>
 
     </section>
-
     <!--why web development section end -->
+
+
+    <!--My Inspiration section start -->
+
+    <section class="Inspiration-container">
+
+      <div class="inspiration-section">
+        <h1 class="inspiration-titel">My Inspiration</h1>
+        <p class="inspiration-description">Driven by a passion for technology and creativity, I strive to transform
+          ideas into impactful web solutions.
+          I aim to
+          inspire others by creating digital experiences that are both innovative and accessible to everyone.
+        </p>
+
+        <div class="vedio-content">
+          <iframe width="800" height="500" src="https://www.youtube.com/embed/5KIWo4ZamAg?si=cHUy6kKoJRea3wA-"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+      </div>
+
+
+    </section>
+
+    <!--My Inspiration section start -->
+
+
 
 
 
