current-target-section

--- a/index.html
+++ b/index.html
@@ -112,11 +112,54 @@
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
       </div>
-
-
     </section>
 
-    <!--My Inspiration section start -->
+    <!--My Inspiration section end -->
+
+
+    <!--My Current Target section start -->
+    <section class="current-target-container">
+
+      <div class="current-target-section">
+        <div class="target-content">
+          <h1 class="current-titel">My Current Target</h1>
+          <p class="current-description">To achieve [specific target] by [specific date].
+            Action Plan: Implement a series of strategic steps, including [step 1], [step 2], and [step 3], to ensure
+            successful
+            accomplishment.
+          </p>
+
+          <div class="my-target-skill">
+            <div id="html-bg-color" class="target-box">
+              <img src="./assets/html.png" alt="">
+              <h2>Html</h2>
+              <p>Html hyper text markup language</p>
+              <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">Learn more</a>
+            </div>
+
+            <div id="css-bg-color" class="target-box">
+              <img src="./assets/css.png" alt="">
+              <h2>CSS</h2>
+              <p>Css cascading style sheet</p>
+              <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">Learn more</a>
+            </div>
+
+            <div id="js-bg-color" class="target-box">
+              <img src="./assets/js.png" alt="">
+              <h2>JavaScript</h2>
+              <p>This is porgraming language</p>
+              <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">Learn more</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--My Current Target section end -->
+
+
+
+
 
 
 
