complite assigment project-1

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>B10A1-Challenge-Begins</title>
 </head>
 
-<body>
+<bo>
   <!--banner section start-->
   <header class="banner-conatiner">
     <div class="banner-content">
@@ -16,12 +16,10 @@
       <div class="banner-text">
         <h1 class="banner-titel">"In the near future, I hope to become a Developer.</h1>
         <p class="banner-descriptin">
-          Future developer with a keen interest in [specific technologies or languages]. I’m actively developing my
-          skills and
-          excited about the potential to work on innovative and challenging projects.
+          Future developer with a keen interest in [specific technologies or languages]. I m actively developing my
+          skills and excited about the potential to work on innovative and challenging projects.
         </p>
-
-        <button class="button-primary"><a href="">Contact with me</a></button>
+        <button class="button-primary"><a href="#contact-me">Contact with me</a></button>
       </div>
     </div>
   </header>
@@ -37,10 +35,8 @@
 
         <header class="box-header">
           <h1 class="box-titel">Why Web Development??</h1>
-          <p class="box-description">Im drawn to web development for its combination of design and technical
-            challenges. I love the process of
-            building
-            functional, visually appealing websites and applications</p>
+          <p class="box-description">Im drawn to web development for its combination of design and technical challenges.
+            I love the process of building functional, visually appealing websites and applications</p>
         </header>
 
         <div class="box-container">
@@ -78,7 +74,8 @@
           <div class="text-box">
             <h2 class="text-box-titel">Creating Future-Ready Websites for Everyone</h2>
             <p class="text-box-description">Crafting innovative and scalable web solutions, I build visually stunning
-              and technologically advanced websites.</p>
+              and technologically advanced websites.
+            </p>
             <button class="button-primary"><a href="">Learn more</a></button>
           </div>
 
@@ -100,9 +97,8 @@
       <div class="inspiration-section">
         <h1 class="inspiration-titel">My Inspiration</h1>
         <p class="inspiration-description">Driven by a passion for technology and creativity, I strive to transform
-          ideas into impactful web solutions.
-          I aim to
-          inspire others by creating digital experiences that are both innovative and accessible to everyone.
+          ideas into impactful web solutions.I aim to inspire others by creating digital experiences that are both
+          innovative and accessible to everyone.
         </p>
 
         <div class="vedio-content">
@@ -157,20 +153,39 @@
 
     <!--My Current Target section end -->
 
+    <!--support section start -->
+    <section class="support-container">
+      <section class="support-content">
+        <h1 class="support-titel">I need Support</h1>
+        <p class="support-description">Plese support me and suggest me any feadback for me</p>
+        <input class="input-text" type="text" placeholder="suggest me any feadback for me">
+        <input class="submit-button" type="submit" value="Submit">
+      </section>
 
+    </section>
+    <!--support section end -->
 
+    <!--footer section start -->
+    <footer class="footer-container">
+      <div class="footer-content">
+        <div class="footer-text">
+          <h3><b>An Open Commitment by Tawhid ahmed</b></h3>
+        </div>
 
+        <div id="contact-me" class="social-media-link">
+          <a href="https://web.facebook.com/freelancershanto19/" target="_blank">
+            <img src="./assets/facebook.png" alt="facebook"></a>
 
+          <a href="https://github.com/shantodeveloper" target="_blank">
+            <img src="./assets/github.png" alt="github"></a>
 
-
-
-
-
-
-
+          <a href="https://www.linkedin.com/in/tawhid-ahmed-375094225/" target="_blank">
+            <img src="./assets/linkedin-icon 1.png" alt="linkedin"></a>
+        </div>
+      </div>
+    </footer>
+    <!--footer section end -->
   </main>
-
-
-</body>
+  </body>
 
 </html>
