--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/style/style.css">
+  <link rel="stylesheet" href="./style/style.css">
   <title>B10A1-Challenge-Begins</title>
 </head>
 
-<bo>
+<body>
   <!--banner section start-->
   <header class="banner-conatiner">
     <div class="banner-content">
@@ -186,6 +186,6 @@
     </footer>
     <!--footer section end -->
   </main>
-  </body>
+</body>
 
 </html>
